--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My webpage!<title>
+		<title>My webpage!</title>
 	</head>
 	<body>
-		hello, world! hello again! hello third time!	<body>
+		hello, world! hello again! hello third time!	
+	</body>
 </html>
